WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132217
[iOS] getAssistedNodeInformation crashes getting the bounding box if it doesn't have a renderer
https://bugs.webkit.org/show_bug.cgi?id=132217
Summary
[iOS] getAssistedNodeInformation crashes getting the bounding box if it doesn...
Dean Jackson
Reported
2014-04-25 20:44:39 PDT
[iOS] getAssistedNodeInformation crashes getting the bounding box if it doesn't have a renderer
Attachments
Patch
(1.99 KB, patch)
2014-04-25 20:49 PDT
,
Dean Jackson
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2014-04-25 20:49:40 PDT
Created
attachment 230235
[details]
Patch
Dean Jackson
Comment 2
2014-04-25 20:57:24 PDT
Committed
r167839
: <
http://trac.webkit.org/changeset/167839
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug