[iOS] getAssistedNodeInformation crashes getting the bounding box if it doesn't have a renderer https://bugs.webkit.org/show_bug.cgi?id=132217 <rdar://problem/16671662>

Patch by Simon Fraser <simon.fraser@apple.com> on 2014-04-25
Reviewed by Dean Jackson.

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::getAssistedNodeInformation): Check that m_assistedNode has
a renderer before asking for its bounding box.

Canonical link: https://commits.webkit.org/150252@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167839 268f45cc-cd09-0410-ab3c-d52691b4dbfc